[package]
name = "u5-lib"
version = "0.1.0"
edition = "2021"
authors = ["Guangzong Chen <chen@ggeta.com>"]

[dependencies]
defmt = { version = "0.3.6" }
defmt-rtt = { version = "0.4.0" }
defmt-itm = { version = "0.3.0" }
sdio-host = { version = "0.9.0" }
heapless = { version = "0.8.0" }
aligned = "0.4.2"
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
usb-device = "0.3.2"

critical-section = "1.1.2"
cortex-m-rt = { version = "0.7.3" }
futures = { version = "0.3.17", default-features = false }
log = "0.4.21"
# byteorder = "1.5.0"

[dependencies.stm32-metapac]
#path = "../stm32-data/build/stm32-metapac"
#git = "https://gitea.ggeta.com/guangzong/stm32-data-generated"
#git = "https://github.com/embassy-rs/stm32-data-generated"
#rev = "eb46264"
path = "/Users/guangzong/Code/tmp/stm32-data/build/stm32-metapac"

features = ["rt"]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
rev = "bcebe4c"

[dependencies.embassy-executor]
#features = ["nightly", "arch-cortex-m", "executor-thread"]
features = ["arch-cortex-m", "executor-thread"]
git = "https://github.com/embassy-rs/embassy"
# rev = "32cff65"
rev = "bcebe4c"

[dependencies.embassy-executor-macros]
# features = ["nightly", "arch-cortex-m", "executor-thread"]
git = "https://github.com/embassy-rs/embassy"
# rev = "32cff65"
rev = "bcebe4c"

# [dependencies.embassy-usb]
# git = "https://github.com/embassy-rs/embassy"
# rev = "32cff65"

# [dependencies.embassy-usb-driver]
# git = "https://github.com/embassy-rs/embassy"
# rev = "32cff65"
# features = ["defmt"]


[profile.dev]
lto = false
opt-level = 3
debug = true


[lib]
name = "u5_lib"
path = "src/lib.rs"
test = false
bench = false

[features]
lse = []
hse_16mhz = []
hse_26mhz = []
otg_fs = []
otg_hs = []

nucleo_u5a5 = ["stm32u5a5zj", "hse_16mhz",  "otg_hs"]
nucleo_u575 = ["stm32u575zi", "lse", "otg_fs"]

utils = []
default = [
    # "stm32u575ci",
#    "stm32u5a5zj",
    #    "memory-x",
    # "defmt",
    "utils",
]
usart_dma = []
# when
#memory-x = [ "stm32-metapac/memory-x", ]
#! ## Chip-selection features
#! Select your chip by specifying the model as a feature, e.g. `stm32c011d6`.
#! Check the `Cargo.toml` for the latest list of supported chips.
#!
#! **Important:** Do not forget to adapt the target chip in your toolchain,
#! e.g. in `.cargo/config.toml`.

stm32u575ag = ["stm32-metapac/stm32u575ag"]
stm32u575ai = ["stm32-metapac/stm32u575ai"]
stm32u575cg = ["stm32-metapac/stm32u575cg"]
stm32u575ci = ["stm32-metapac/stm32u575ci"]
stm32u575og = ["stm32-metapac/stm32u575og"]
stm32u575oi = ["stm32-metapac/stm32u575oi"]
stm32u575qg = ["stm32-metapac/stm32u575qg"]
stm32u575qi = ["stm32-metapac/stm32u575qi"]
stm32u575rg = ["stm32-metapac/stm32u575rg"]
stm32u575ri = ["stm32-metapac/stm32u575ri"]
stm32u575vg = ["stm32-metapac/stm32u575vg"]
stm32u575vi = ["stm32-metapac/stm32u575vi"]
stm32u575zg = ["stm32-metapac/stm32u575zg"]
stm32u575zi = ["stm32-metapac/stm32u575zi"]
stm32u585ai = ["stm32-metapac/stm32u585ai"]
stm32u585ci = ["stm32-metapac/stm32u585ci"]
stm32u585oi = ["stm32-metapac/stm32u585oi"]
stm32u585qi = ["stm32-metapac/stm32u585qi"]
stm32u585ri = ["stm32-metapac/stm32u585ri"]
stm32u585vi = ["stm32-metapac/stm32u585vi"]
stm32u585zi = ["stm32-metapac/stm32u585zi"]
stm32u595ai = ["stm32-metapac/stm32u595ai"]
stm32u595aj = ["stm32-metapac/stm32u595aj"]
stm32u595qi = ["stm32-metapac/stm32u595qi"]
stm32u595qj = ["stm32-metapac/stm32u595qj"]
stm32u595ri = ["stm32-metapac/stm32u595ri"]
stm32u595rj = ["stm32-metapac/stm32u595rj"]
stm32u595vi = ["stm32-metapac/stm32u595vi"]
stm32u595vj = ["stm32-metapac/stm32u595vj"]
stm32u595zi = ["stm32-metapac/stm32u595zi"]
stm32u595zj = ["stm32-metapac/stm32u595zj"]
stm32u599bj = ["stm32-metapac/stm32u599bj"]
stm32u599ni = ["stm32-metapac/stm32u599ni"]
stm32u599nj = ["stm32-metapac/stm32u599nj"]
stm32u599vi = ["stm32-metapac/stm32u599vi"]
stm32u599vj = ["stm32-metapac/stm32u599vj"]
stm32u599zi = ["stm32-metapac/stm32u599zi"]
stm32u599zj = ["stm32-metapac/stm32u599zj"]
stm32u5a5aj = ["stm32-metapac/stm32u5a5aj"]
stm32u5a5qj = ["stm32-metapac/stm32u5a5qj"]
stm32u5a5rj = ["stm32-metapac/stm32u5a5rj"]
stm32u5a5vj = ["stm32-metapac/stm32u5a5vj"]
stm32u5a5zj = ["stm32-metapac/stm32u5a5zj"]
stm32u5a9bj = ["stm32-metapac/stm32u5a9bj"]
stm32u5a9nj = ["stm32-metapac/stm32u5a9nj"]
stm32u5a9vj = ["stm32-metapac/stm32u5a9vj"]
stm32u5a9zj = ["stm32-metapac/stm32u5a9zj"]
