[package]
name = "u5-lib"
version = "0.1.0"
edition = "2021"
authors = ["Guangzong Chen <chen@ggeta.com>"]

[dependencies]
# panic-profile = "0.3.1"
# panic-probe = { version = "0.3.1", features = ["print-defmt"] }
# embedded-test = {version = "0.4.1", features = ["log"]}
# embedded-test = { version = "0.7.0-alpha.3", features = ["log", "defmt"] }
log = { version = "0.4", optional = true }
embedded-test = { version = "0.7.0-alpha.3", features = ["log","embassy"] }
# embedded-test = { version = "0.4.1", features = ["log"] }
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
sdio-host = { version = "0.9.0" }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }

critical-section = "1.1.2"
cortex-m-rt = { version = "0.7.3" }
futures = { version = "0.3.17", default-features = false }

[dependencies.stm32-metapac]
git = "https://github.com/embassy-rs/stm32-data-generated"
features = ["rt"]
rev = "34a338b3fd367ca053cc217d1e8edce2472d1b5f"

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
# rev = "bcebe4c"
version = "0.7.2"

[dependencies.embassy-executor]
features = ["arch-cortex-m", "executor-thread"]
# git = "https://github.com/embassy-rs/embassy"
version = "0.9.1"
# rev = "bcebe4c"

[dependencies.embassy-executor-macros]
git = "https://github.com/embassy-rs/embassy"
rev = "bcebe4c"

[dependencies.embassy-usb-driver]
git = "https://github.com/embassy-rs/embassy"
# features = ["defmt"]
rev = "bcebe4c"

[profile.dev]
lto = false
opt-level = 3
debug = true


[lib]
name = "u5_lib"
path = "src/lib.rs"
test = false
bench = false

[features]
defmt = ["dep:defmt", "dep:defmt-rtt", "stm32-metapac/defmt", "embassy-usb-driver/defmt"]
log = ["dep:log"]
lse = []
hse_16mhz = []
hse_26mhz = []

nucleo_u5a5 = ["stm32u5a5zj", "lse", "hse_16mhz"]
nucleo_u575 = ["stm32u575zi", "lse"]

utils = []
default = [
    # "utils",
    "nucleo_u575",

]
usart_dma = []

stm32u575ag = ["stm32-metapac/stm32u575ag"]
stm32u575ai = ["stm32-metapac/stm32u575ai"]
stm32u575cg = ["stm32-metapac/stm32u575cg"]
stm32u575ci = ["stm32-metapac/stm32u575ci"]
stm32u575og = ["stm32-metapac/stm32u575og"]
stm32u575oi = ["stm32-metapac/stm32u575oi"]
stm32u575qg = ["stm32-metapac/stm32u575qg"]
stm32u575qi = ["stm32-metapac/stm32u575qi"]
stm32u575rg = ["stm32-metapac/stm32u575rg"]
stm32u575ri = ["stm32-metapac/stm32u575ri"]
stm32u575vg = ["stm32-metapac/stm32u575vg"]
stm32u575vi = ["stm32-metapac/stm32u575vi"]
stm32u575zg = ["stm32-metapac/stm32u575zg"]
stm32u575zi = ["stm32-metapac/stm32u575zi"]
stm32u585ai = ["stm32-metapac/stm32u585ai"]
stm32u585ci = ["stm32-metapac/stm32u585ci"]
stm32u585oi = ["stm32-metapac/stm32u585oi"]
stm32u585qi = ["stm32-metapac/stm32u585qi"]
stm32u585ri = ["stm32-metapac/stm32u585ri"]
stm32u585vi = ["stm32-metapac/stm32u585vi"]
stm32u585zi = ["stm32-metapac/stm32u585zi"]
stm32u595ai = ["stm32-metapac/stm32u595ai"]
stm32u595aj = ["stm32-metapac/stm32u595aj"]
stm32u595qi = ["stm32-metapac/stm32u595qi"]
stm32u595qj = ["stm32-metapac/stm32u595qj"]
stm32u595ri = ["stm32-metapac/stm32u595ri"]
stm32u595rj = ["stm32-metapac/stm32u595rj"]
stm32u595vi = ["stm32-metapac/stm32u595vi"]
stm32u595vj = ["stm32-metapac/stm32u595vj"]
stm32u595zi = ["stm32-metapac/stm32u595zi"]
stm32u595zj = ["stm32-metapac/stm32u595zj"]
stm32u599bj = ["stm32-metapac/stm32u599bj"]
stm32u599ni = ["stm32-metapac/stm32u599ni"]
stm32u599nj = ["stm32-metapac/stm32u599nj"]
stm32u599vi = ["stm32-metapac/stm32u599vi"]
stm32u599vj = ["stm32-metapac/stm32u599vj"]
stm32u599zi = ["stm32-metapac/stm32u599zi"]
stm32u599zj = ["stm32-metapac/stm32u599zj"]
stm32u5a5aj = ["stm32-metapac/stm32u5a5aj"]
stm32u5a5qj = ["stm32-metapac/stm32u5a5qj"]
stm32u5a5rj = ["stm32-metapac/stm32u5a5rj"]
stm32u5a5vj = ["stm32-metapac/stm32u5a5vj"]
stm32u5a5zj = ["stm32-metapac/stm32u5a5zj"]
stm32u5a9bj = ["stm32-metapac/stm32u5a9bj"]
stm32u5a9nj = ["stm32-metapac/stm32u5a9nj"]
stm32u5a9vj = ["stm32-metapac/stm32u5a9vj"]
stm32u5a9zj = ["stm32-metapac/stm32u5a9zj"]

[[test]]
name = "gpio"
harness = false
[[test]]
name = "panic"
harness = false
[[test]]
name = "tim"
harness = false

[[test]]
name = "rtc"
harness = false
[[test]]
name = "clock"
harness = false
