[package]
name = "led"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.8.0"

embedded-sdmmc = { version = "0.6.0", default-features = false, features = [
    "defmt-log",
] }
u5-lib = { path = "../u5-lib" }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7.3" }
futures = { version = "0.3.17", default-features = false, fetures = [
    "async-await",
] }

defmt = { version = "0.3.5" }
defmt-rtt = { version = "0.4.0" }
defmt-itm = { version = "0.3.0" }


stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-7117ad49c06fa00c388130a34977e029910083bd", features = [
    "stm32u575ri",
    # "stm32u575zi",
] }
embassy-sync = { version = "0.2.0" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "b4bc9ac028568dfb3896dfb00cbd1e181863fd64" }
[dependencies.embassy-executor]
features = ["nightly", "arch-cortex-m", "executor-thread", "integrated-timers"]
git = "https://github.com/embassy-rs/embassy"
rev = "a31ae52"

[dependencies.embassy-usb]
git = "https://github.com/embassy-rs/embassy"
rev = "a31ae52"

[dependencies.embassy-stm32]
features = [
    # "stm32u575zi",
    "stm32u575ri",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
    "defmt",
]
rev = "a31ae52"
git = "https://github.com/embassy-rs/embassy"
version = "0.1.0"

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
rev = "a31ae52"


[[bin]]
name = "led"
bench = false
test = false
[[bin]]
name = "i2c"
bench = false
test = false
[[bin]]
name = "cam"
bench = false
test = false
[[bin]]
name = "sd"
bench = false
test = false
[[bin]]
name = "sd_cam"
bench  = false
test = false

[profile.dev]
lto = true
opt-level = "z"
debug = true
